--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.1",
     "@mirohq/miro-api": "^2.0.0",
-    "mirotone": "5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@salable/node-sdk": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.3",
+    "cookie": "0.5.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
-    "cookie": "^0.5.0"
+    "mirotone": "5",
+    "next": "14.2.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@mirohq/websdk-types": "latest",
-    "typescript": "4.9.5",
+    "@types/cookie": "^0.5.1",
     "@types/node": "^18.8.2",
     "@types/react": "^18.0.24",
-    "@types/cookie": "^0.5.1"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.4",
+    "typescript": "4.9.5"
   }
 }
